# charex

./: .gitignore  CHANGELOG.md  README.md  mix.exs
.github/workflows/: ci.yml  release.yml  rust-ci.yml
config/: config.exs  dev.exs  test.exs
lib/: charex.ex
lib/charex/: native.ex  token.ex
native/charex_native/: Cargo.toml  README.md
native/charex_native/src/: lib.rs  tokenizer.rs
test/: benchmark_test.exs  charex_test.exs
test/support/: bench.ex  bench_support.ex
